tests/golden/err-import-multi-descent/expected_error.txt
error: 複数段の下り import（`./a/b`）は未決定です
 --> ./_.clum:1:2
  |
1 | @./a/b
  |  ^^^^^ コア仕様の要決定31です。1段ずつ import してください
